fix footer floating on mobile maybe

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@ html, body {
 body {
     margin: 0;
     position: relative;
-    min-height: 100vh;
+    min-height: 100dvh;
     overflow-x: hidden;
 }
 
